Improved unit tests by using an object spy