@@ -42,6 +42,18 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.12.9</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -53,12 +65,18 @@
                 <configuration>
                     <source>18</source>
                     <target>18</target>
+                    <compilerArgs>
+                        <arg>--add-exports=javafx.base/com.sun.javafx.beans=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>--add-exports=javafx.base/com.sun.javafx.beans=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
